test/corpus/L1/positive/array-empty.st
"---
kind: positive
section: array.empty
note: empty literal array
---"
#()
