test/corpus/L1/negative/empty-symbol.st
"---
kind: negative
section: error.empty-symbol
codes: E_EMPTY_SYMBOL
---"
#
